--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-147980982-1"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-156694447-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-147980982-1');
+  gtag('config', 'UA-156694447-1');
 </script>
 
 
-    <title>Vaibhav Bisht</title>
+    <title>Piyush Katariya</title>
     <script type="text/javascript" src="js/particles.min.js"></script>
     <link
       rel="stylesheet"
@@ -71,51 +71,51 @@
             <h6>Hello Reader, I'm,</h6>
           </div>
           <div>
-            <h1>Vaibhav Bisht</h1>
+            <h1>Piyush Katariya</h1>
           </div>
           <div class="pr-lg-5">
             <p>
-              an Open Source Contributor 🚀 and an undergrad student at Maharaja Surajmal Institute Of Technology 🏫.
-              Having quite an experience with Andriod 💻, Web 🕸, Flutter 🦆 and iOS Development 👨‍💻. And sports freak ⛹️‍♂️! 
+              an Open Source Contributor 🚀 and an undergrad student at Bharati Vidyapeeth College of Engineering 🏫.
+              Having quite an experience with Andriod 💻, Web 🕸, active competetive coder And  sports freak ⛹️‍♂️! 
               <p>Currently Working With :</p>
-              <p>-Google (Point Of Contact)</p>
-              <p>-Coding Blocks (Program Manager)</p>
-              <p>-IOSD (Contributor)</p>
+              <p>-Searching for internship (Point Of Contact)</p>
+              <p>-Coding Blocks (Campus Ambassador)</p>
+              <p>-Google Crowdsource (Contributor)</p>
             </p>
           </div>
           <div id="social-links-container" class="row pl-2">
             <div id="social-github" class="social-container">
-              <a href="https://github.com/vaibhavbisht06" target="_blank">
+              <a href="https://github.com/Piyush2912" target="_blank">
                 <i class="fab fa-github" style="color: #211f1f"></i>
               </a>
             </div>
 
             <div id="social-linkedin" class="social-container">
-              <a href="https://www.linkedin.com/in/vaibhav-bisht-00b644165/" target="_blank">
+              <a href="https://www.linkedin.com/in/piyush-katariya-197332180/" target="_blank">
                 <i class="fab fa-linkedin" style="color: #0077B5"></i>
               </a>
             </div>
 
             <div id="social-fb" class="social-container">
-              <a href="https://www.facebook.com/profile.php?id=100008963347274" target="_blank">
+              <a href="https://www.facebook.com/piyush.katariya.7" target="_blank">
                 <i class="fab fa-facebook-f" style="color: #3b5998"></i>
               </a>
             </div>
 
             <div id="social-twitter" class="social-container">
-              <a href="https://twitter.com/Bisht06Vaibhav" target="_blank">
+              <a href="https://twitter.com/PiyushK38849693" target="_blank">
                 <i class="fab fa-twitter" style="color: #1da1f2"></i>
               </a>
             </div>
 
             <div id="social-instagram" class="social-container">
-              <a href="https://www.instagram.com/vaibhav_bisht.35/" target="_blank">
+              <a href="https://www.instagram.com/piyush_katariya12/" target="_blank">
                 <i class="fab fa-instagram" style="color: #8a3ab9"></i>
               </a>
             </div>
 
             <div id="social-email" class="social-container">
-              <a href="mailto:vaibhavbisht06@gmail.com" target="_blank">
+              <a href="mailto:piyushkatariya95@gmail.com" target="_blank">
                 <i class="far fa-envelope" style="color: #ff4800"></i>
               </a>
             </div>
@@ -123,7 +123,7 @@
 
           <a
             class="btn btn-outline-success mt-3"
-            href="https://github.com/vaibhavbisht06/vaibhavbisht06.github.io/raw/master/assets/Vaibhav's%20Resume%20website.pdf"
+        <!--  href="https://github.com/vaibhavbisht06/vaibhavbisht06.github.io/raw/master/assets/Vaibhav's%20Resume%20website.pdf"   -->
             target="_blank"
           >
             My Resume
