--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
           </div>
 
           <a
-            class="btn btn-outline-success mt-3"
+            class="btn btn-outline-success mt-3"  target="_blank" >
         <!--  href="https://github.com/vaibhavbisht06/vaibhavbisht06.github.io/raw/master/assets/Vaibhav's%20Resume%20website.pdf"   -->
-            target="_blank"
-          >
+           
+         
             My Resume
           </a>
         </div>
