--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
           </div>
           <div class="pr-lg-5">
             <p>
-              an Open Source Contributor 🚀 and an undergrad student at Bharati Vidyapeeth College of Engineering 🏫.
-              Having quite an experience with Andriod 💻, Web 🕸, active competetive coder And  sports freak ⛹️‍♂️! 
+              an Open Source enthusiast 🚀 and a final year computer science and engineering student at Bharati Vidyapeeth College of Engineering 🏫.
+              Having quite an experience with research 💻, Web 🕸, active competetive coder And  sports freak ⚽🏃! 
               <p>Currently Working With :</p>
-              <p>-Searching for internship (Point Of Contact)</p>
-              <p>-Coding Blocks (Campus Ambassador)</p>
+              <p>-Searching for internship (Contact me by mailing to piyushkatariya95@gmail.com)</p>
+              <p>-Accenture (Associate Software Engineer)</p>
               <p>-Google Crowdsource (Contributor)</p>
             </p>
           </div>
@@ -122,10 +122,8 @@
           </div>
 
           <a
-            class="btn btn-outline-success mt-3"  target="_blank" >
-        <!--  href="https://github.com/vaibhavbisht06/vaibhavbisht06.github.io/raw/master/assets/Vaibhav's%20Resume%20website.pdf"   -->
-           
-         
+            class="btn btn-outline-success mt-3"
+        <!--  href="assets/Piyush_Resume_Final_Year.pdf"   -->
             My Resume
           </a>
         </div>
